# comfyui-smart-lora-downloader

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLICATION_CHECKLIST.md  QUICKSTART.md  README.md  README_GITHUB.md  SECURITY.md  SOLUTION.md  TESTING_CHECKLIST.md  __init__.py  auto_lora_detector.py  debug_search.py  example_workflow.json  github_setup_commands.txt  install.bat  lora_auto_downloader.py  lora_name_matcher.py  node_config.json  pyproject.toml  quick_test.py  test.py  test_matching.py  test_real_cases.py  workflow_interceptor.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help_support.md
.github/workflows/: ci.yml
